--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "joi": "^14.3.1",
+    "mongo-seeding": "^3.3.0",
     "mongoose": "^5.6.7",
     "mongoose-string-query": "^0.2.7",
     "mongoose-timestamp": "^0.6.0",
